Redesign city stock planning
